@@ -3,28 +3,32 @@ package com.attvs.backend.config;
 import com.attvs.backend.handler.LiveEventHandler;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.reactive.handler.SimpleUrlHandlerMapping;
 import org.springframework.web.reactive.socket.server.support.WebSocketHandlerAdapter;
 
+import java.util.Collections;
 import java.util.Map;
 
-//LỚP CẤU HÌNH CHO VIỆC KẾT NỐI VỚI WEBSOCKET
 @Configuration
 public class WebSocketConfig {
 
     @Bean
-    //BEAN NÀY ĐỂ MAP WEBSOCKET REQUEST SANG CHO LiveEventHandler ĐỂ XỬ LÝ
     public HandlerMapping webSocketMapping(LiveEventHandler liveEventHandler) {
-        return new SimpleUrlHandlerMapping(Map.of("/ws/live", liveEventHandler));
+        SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping(Map.of("/ws/live", liveEventHandler));
+        mapping.setOrder(1); // Đặt độ ưu tiên
+
+        //Mở cửa (CORS) cho phép Frontend từ mọi nơi cắm vào
+        CorsConfiguration corsConfig = new CorsConfiguration();
+        corsConfig.addAllowedOriginPattern("*"); 
+        mapping.setCorsConfigurations(Collections.singletonMap("*", corsConfig));
+
+        return mapping;
     }
 
-
     @Bean
-    //BEAN NÀY DÙNG ĐỂ CHUYỂN ĐỔI GIỮA HTTP REQUEST THÔNG THƯỜNG SANG WEBSOCKET
     public WebSocketHandlerAdapter handlerAdapter() {
         return new WebSocketHandlerAdapter();
     }
-
-
 }
